test/objects/Family_Members__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income (Annually)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile number</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Relation__c</fullName>
        <inlineHelpText>Enter Correct Relation with Profile</inlineHelpText>
        <label>Other Relation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Profile</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>Family Members</relationshipLabel>
        <relationshipName>Family_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relation_with_profile__c</fullName>
        <label>Relation With Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Half siblings</fullName>
                </value>
                <value>
                    <fullName>Stepsiblings</fullName>
                </value>
                <value>
                    <fullName>Sister-in-law</fullName>
                </value>
                <value>
                    <fullName>Brother-in-law</fullName>
                </value>
                <value>
                    <fullName>Cousin&apos;s-in -law</fullName>
                </value>
                <value>
                    <fullName>Grand Father</fullName>
                </value>
                <value>
                    <fullName>Grand Mother</fullName>
                </value>
                <value>
                    <fullName>Nephew</fullName>
                </value>
                <value>
                    <fullName>Niece</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_Status__c</fullName>
        <label>Working Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Homemaker</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Self Employed</fullName>
                </value>
                <value>
                    <fullName>Studying</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Passed Away</fullName>
                    <isActive>false</isActive>
                    <label>Passed Away</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_as__c</fullName>
        <label>Working as</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_with__c</fullName>
        <label>Working with</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private Company</fullName>
                </value>
                <value>
                    <fullName>Government/Public Sector</fullName>
                </value>
                <value>
                    <fullName>Defence/Civil Sector</fullName>
                </value>
                <value>
                    <fullName>Business/ Self Employeed</fullName>
                </value>
                <value>
                    <fullName>Not Working</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Family Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mobile__c</columns>
        <columns>Profile__c</columns>
        <columns>Working_with__c</columns>
        <columns>Relation_with_profile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mobile</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX( Mobile__c , &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorMessage>Enter 10 Digit Valid Phone Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_relation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Relation_with_profile__c , &apos;Other&apos;) &amp;&amp; ISBLANK( Other_Relation__c )</errorConditionFormula>
        <errorDisplayField>Other_Relation__c</errorDisplayField>
        <errorMessage>Mention Other Relation Name</errorMessage>
    </validationRules>
</CustomObject>